tests/bad_programs/syntax_errors/decl_two_types_same.notc
int main() {
    int int var;
}
